# nes

./: .gitignore  Cargo.toml
data/: opcodes.txt
src/: base.rs  cpu.rs  graphics.rs  lib.rs  logger.rs  main.rs  platform.rs  rom.rs  system.rs  ui.rs
src/nes/: base.rs  cpu.rs  cpu_tests.rs  graphics.rs  mod.rs  platform.rs  ui.rs
