[package]
name = "nes"
version = "0.1.0"
authors = ["Chris Smith <crsmithdev@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.22.1"
gfx-hal = "0.5.0"
gfx-backend-metal = "0.5.1"
log = "0.4.8"
image = "0.23.4"
env_logger = "0.7.1"
objc = "0.2.7"
cocoa = "0.20.0"
lazy_static = "1.4.0"
nfd = "0.0.4"
core-text = "15.0.0"
core-graphics = "0.19.0"
core-foundation = "0.7.0"
timer = "0.2.0"
chrono = "0.4"
error-chain = "0.12.2"
maplit = "1.0.2"
